sumo/tests/duarouter/errors/network/edge/lane/root__edge__lane#maxspeed__empty12/errors.duarouter
Error: Attribute 'maxspeed' in definition of lane '1_1' is empty.
Quitting (on error).
